@@ -1,9 +1,13 @@
 $Id$
             
-            [- Version 2.1.26 -]
+            [- Version 2.1.27 -]
 2006-11-19: multilet.lisp: Convention for new variables changed: macro
             var bound to run-time var with name #:v-27 is v$ (not -v-,
             which looks too much like some kind of segment).
+            
+            debug.lisp: Fixed bug whereby all unlabeled values of forms
+            were being discarded.  Now they are all saved, with names
+            *, */, *//, *///, */4, etc.
 
             [- Version 2.1.24 -]
 2006-11-09: debug.lisp: Changed conventions so all values of form in
